syntax = "proto3";

option csharp_namespace = "CinemaService";

service GrpcRoom {
    rpc GetRoom (GetRoomRequest) returns (GrpcRoomResponse);
}

message GetRoomRequest {
    string id = 1;
}

message GrpcRoomModel {
    string id = 1;
    string name = 2;
    string cinema = 3;
    int32 totalSeats = 4;
}

message GrpcRoomResponse {
    GrpcRoomModel Room = 1;
}
